# faster-whisper-live

./: Readme.md  pyproject.toml
examples/: async_example.py  sync_example.py
faster_whisper_live/: __init__.py  constants.py  data.py  ffmpeg.py  live_whisper.py
