[tool.poetry]
name = "faster-whisper-live"
version = "0.1.0"
description = ""
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]
readme = "Readme.md"
packages = [{include = "faster_whisper_live"}]

[tool.poetry.dependencies]
python = "^3.8"
faster-whisper = "^0.5.1"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
aiofiles = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

